Use w = 4 eps for hashing (.8 collision prob), use median total work as estimator of work for merging step.

--- a/evaluation/log.ipynb
+++ b/evaluation/log.ipynb
@@ -64,11 +64,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Which values of w should we choose?\n",
+    "\n",
+    "Old experiments: Use w = \\epsilon, which gives collision probability 1/e. \n",
+    "\n",
+    "Could also use w = 4 * \\epsilon, which gives collision probability 80%."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "w = \\epsilon: dataset mnist\n",
+    "\n",
+    "eps = 1200, minPts = 100, delta = 0.1: 25s\n",
+    "eps = 1600, minPts = 100, delta = 0.1: 30s\n",
+    "eps = 1800, minPts = 100, delta = 0.1: 30s\n",
+    "eps = 2000, minPts = 100, delta = 0.1: 27s\n",
+    "\n",
+    "\n",
+    "w = 4 * \\epsilon: dataset mnist\n",
+    "\n",
+    "eps = 1200, minPts = 100, delta = 0.1: 23s\n",
+    "eps = 1600, minPts = 100, delta = 0.1: 27s\n",
+    "eps = 1800, minPts = 100, delta = 0.1: 25s\n",
+    "eps = 2000, minPts = 100, delta = 0.1: 17s\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "w = \\epsilon: dataset pamap2\n",
+    "w = 4 * \\epsilon: dataset pamap2\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
